--- a/src/app/listar/listar.component.html
+++ b/src/app/listar/listar.component.html
@@ -1,1 +1,1 @@
-<p>listar works!</p>
+<p>Profe ya todo el crud de find y traer esta pero no lo alcance a hacer, dentro del controller y dentro de el Libro. service esta todo, solo era traerlo aca e imprimirlo. Lo siento</p>
