--- a/src/app/agregar/agregar.component.html
+++ b/src/app/agregar/agregar.component.html
@@ -1,1 +1,38 @@
-<p>agregar works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agregar Libro</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" >
+</head>
+<body>
+  <div class="container">
+    <h1 class="title">Agregar libro</h1>
+    <form>
+      <div class="form-group">
+        <label for="titulo">Título:</label>
+        <input type="text" id="titulo" name="titulo"  [(ngModel)]="libro.titulo" name="titulo">
+      </div>
+      <div class="form-group">
+        <label for="referencia">Referencia:</label>
+        <input type="text" id="referencia" name="referencia" [(ngModel)]="libro.referencia" name="referencia">
+      </div>
+      <div class="form-group">
+        <label for="autor">Autor:</label>
+        <input type="text" id="autor" name="autor" [(ngModel)]="libro.autor" name="autor">
+      </div>
+      <div class="form-group">
+        <label for="precio">Precio:</label>
+        <input type="text" id="precio" name="precio" [(ngModel)]="libro.precio" name="precio">
+      </div>
+      <div class="form-group">
+        <label for="ubicacion">Ubicación:</label>
+        <input type="text" id="ubicacion" name="ubicacion" [(ngModel)]="libro.ubicacion" name="ubicacion">
+      </div>
+      <button (click)="btnAgregar()" class="button">Agregar</button>
+    </form>
+  </div>
+</body>
+</html>
